Modals: prevent overflow of added-confirm illustration on mobile.

--- a/resources/assets/js/Selection/SelectionModal.scss
+++ b/resources/assets/js/Selection/SelectionModal.scss
@@ -258,6 +258,9 @@
     animation-fill-mode: forwards;
   }
 }
+.SelectionModal__added-illu-svg {
+  max-width: 100%;
+}
 @keyframes IntroduceHeart {
   from {
     fill: #000;
